force-app/main/default/objects/DC_Central_Plant__c/DC_Central_Plant__c.object-meta.xml
<CustomObject>
    <label>Central Plant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Central Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>