force-app/main/default/objects/DC_Central_Plant__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Building this Central Plant supports.</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Central Plants</relationshipLabel>
    <relationshipName>Central_Plants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>