force-app/main/default/objects/DC_Central_Plant__c/fields/Max_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_kW__c</fullName>
    <formula>Max_Capacity_tons__c / 0.284345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>