force-app/main/default/objects/DC_Central_Plant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of Central Plant.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooling Tower</fullName>
            </value>
            <value>
                <fullName>Condensor</fullName>
            </value>
            <value>
                <fullName>Chiller</fullName>
            </value>
            <value>
                <fullName>Roof Top Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>